tests/pass/04_functions.lang
функция сумма(целое а, целое б) : целое {
    вернуть а + б;
}

функция Начало() : целое {
    целое рез = сумма(10, 32);
    печать(рез);
    вернуть 0;
}
