tests/fail/18_char_multichar.lang
функция Начало(): целое {
  символ multi = 'ab';
  вернуть 0;
}
